# tinymlip

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: download.py
notebooks/: 01_atoms_as_graphs.py  02_message_passing.py  03_energy_and_forces.py  04_training_invariant.py  05_equivariant_model.py  06_crystals_and_pbc.py
notebooks/__marimo__/session/: 01_atoms_as_graphs.py.json  02_message_passing.py.json  03_energy_and_forces.py.json  04_training_invariant.py.json  05_equivariant_model.py.json  06_crystals_and_pbc.py.json
src/tinymlip/: __init__.py  basis.py  data.py  forces.py  graph.py  layers.py  models.py  train.py  viz.py
tests/: conftest.py  test_basis.py  test_batching.py  test_data.py  test_extensivity.py  test_forces.py  test_graph.py  test_invariance.py  test_layers.py  test_pbc.py  test_train.py  test_viz.py
tests/fixtures/: build_rmd17_mini.py
tests/fixtures/rmd17_mini/: rmd17_aspirin.npz
