[project]
name = "tinymlip"
version = "0.0.1"
description = "Educational implementation of Machine Learning Interatomic Potentials (MLIPs)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Karthik Iyer" }]
dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.5",
    "ase>=3.23",
    "pymatgen>=2024.6",
    "polars>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "marimo>=0.9",
    "plotly>=5.20",
    "py3dmol>=2.1",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
viz = ["nglview>=3.1"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinymlip"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tinymlip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
